Add header background  :art:

--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <h1>FONTS WORKING :)</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, at
+        incidunt, consectetur rem soluta aliquam aut quis corrupti, commodi
+        eveniet repellat neque nesciunt sed hic veniam reprehenderit dolores
+        quas corporis!
+      </p>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt aut
+        deserunt doloribus dignissimos eaque laborum sequi perferendis, labore
+        animi sit quisquam cumque inventore nam nisi blanditiis laboriosam
+        soluta. Modi, reprehenderit soluta est, qui id aspernatur hic facilis
+        maiores in delectus dolor. Illum sint ea temporibus mollitia, unde est
+        voluptates quis?
+      </p>
 
-</head>
-<body>
-  <h1>FONTS WORKING :)</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, at incidunt, consectetur rem soluta aliquam aut quis corrupti, commodi eveniet repellat neque nesciunt sed hic veniam reprehenderit dolores quas corporis!</p>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt aut deserunt doloribus dignissimos eaque laborum sequi perferendis, labore animi sit quisquam cumque inventore nam nisi blanditiis laboriosam soluta. Modi, reprehenderit soluta est, qui id aspernatur hic facilis maiores in delectus dolor. Illum sint ea temporibus mollitia, unde est voluptates quis?</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam id cum,
+        error earum culpa cupiditate commodi harum fugit sapiente ipsum tenetur!
+        Ex quas commodi dolore ipsa, eveniet quia incidunt quo!
+      </p>
 
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam id cum, error earum culpa cupiditate commodi harum fugit sapiente ipsum tenetur! Ex quas commodi dolore ipsa, eveniet quia incidunt quo!</p>
-
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, est?</p>
-</body>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, est?
+      </p>
+    </header>
+  </body>
 </html>
