Add  home section

--- a/index.html
+++ b/index.html
@@ -9,31 +9,38 @@
   </head>
   <body>
     <header class="header">
-      <h1>FONTS WORKING :)</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, at
-        incidunt, consectetur rem soluta aliquam aut quis corrupti, commodi
-        eveniet repellat neque nesciunt sed hic veniam reprehenderit dolores
-        quas corporis!
-      </p>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt aut
-        deserunt doloribus dignissimos eaque laborum sequi perferendis, labore
-        animi sit quisquam cumque inventore nam nisi blanditiis laboriosam
-        soluta. Modi, reprehenderit soluta est, qui id aspernatur hic facilis
-        maiores in delectus dolor. Illum sint ea temporibus mollitia, unde est
-        voluptates quis?
-      </p>
+      <div class="header__heading-box">
+        <h1 class="header__heading">
+          <span class="header__heading--main">Think</span>
+          <span class="header__heading--main">Outside</span>
+          <span class="header__heading--sub">Of the box</span>
+        </h1>
 
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam id cum,
-        error earum culpa cupiditate commodi harum fugit sapiente ipsum tenetur!
-        Ex quas commodi dolore ipsa, eveniet quia incidunt quo!
-      </p>
+        <h1 class="header__heading shadow">
+          <span class="header__heading--main">Think</span>
+          <span class="header__heading--main">Outside</span>
+          <span class="header__heading--sub">Of the box</span>
+        </h1>
+      </div>
 
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, est?
-      </p>
+      <div class="header__img"></div>
     </header>
+    <div class="read-more">
+      <a href="#about" class="btn">Read more</a>
+    </div>
+
+    <nav class="navbar">
+      <a class="navbar__brand" href="#">Agency</a>
+      <ul class="navbar__nav">
+        <li><a class="navbar__link" href="#">Home</a></li>
+        <li><a class="navbar__link" href="#about">About us</a></li>
+        <li><a class="navbar__link" href="#services">Services</a></li>
+        <li><a class="navbar__link" href="#process">Process</a></li>
+        <li><a class="navbar__link" href="#team">Team</a></li>
+        <li><a class="navbar__link" href="#clients">Clients</a></li>
+        <li><a class="navbar__link" href="#work">Work</a></li>
+        <li><a class="navbar__link" href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
