Add about section

--- a/index.html
+++ b/index.html
@@ -42,5 +42,18 @@
         <li><a class="navbar__link" href="#contact">Contact</a></li>
       </ul>
     </nav>
+    <section id="about" class="about">
+      <div class="about-wrapper">
+          <div class="about-text">
+              <h2>Who we are</h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae labore autem mollitia aperiam illo laboriosam dicta eveniet at quisquam eligendi odit porro vel quis perferendis nesciunt, laudantium ut nostrum? Laborum?</p>
+              <a href="#" class="btn btn--red">Read more</a>
+            </div>
+            <div class="about-img">
+                <img src="./photo/laptop.png" alt="design">
+            </div>
+      </div>
+
+    </section>
   </body>
 </html>
