Add services section

--- a/index.html
+++ b/index.html
@@ -55,5 +55,63 @@
       </div>
 
     </section>
+    <section id="services" class="services">
+      <h2>What we do</h2>
+
+      <div class="service">
+        <div class="service-header">
+          <div class="service__icon">
+            <img src="./photo/01.svg">
+          </div>
+          <h3>Creative Work</h3>
+        </div>
+        <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+      </div>
+      <div class="service">
+        <div class="service-header">
+          <div class="service__icon">
+            <img src="./photo/02.svg">
+          </div>
+          <h3>We do Best</h3>
+        </div>
+        <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+      </div>
+      <div class="service">
+        <div class="service-header">
+          <div class="service__icon">
+            <img src="./photo/03.svg">
+          </div>
+          <h3>Best Company</h3>
+        </div>
+        <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+      </div>
+      <div class="service">
+        <div class="service-header">
+          <div class="service__icon">
+            <img src="./photo/04.svg">
+          </div>
+          <h3>Nice Idea</h3>
+        </div>
+        <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+      </div>
+      <div class="service">
+        <div class="service-header">
+          <div class="service__icon">
+            <img src="./photo/05.svg">
+          </div>
+          <h3>Proffesional</h3>
+        </div>
+        <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+      </div>
+      <div class="service">
+        <div class="service-header">
+          <div class="service__icon">
+            <img src="./photo/06.svg">
+          </div>
+          <h3>Great servicec</h3>
+        </div>
+        <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+      </div>
+    </section>
   </body>
 </html>
