Add process section

--- a/index.html
+++ b/index.html
@@ -108,9 +108,34 @@
           <div class="service__icon">
             <img src="./photo/06.svg">
           </div>
-          <h3>Great servicec</h3>
+          <h3>Great Services</h3>
         </div>
         <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+      </div>
+    </section>
+    <section id="process" class="process">
+        <h2>How we works</h2>
+      <div class="processes">
+        <div class="processes__main-text">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque amet officiis sequi dolorem, reiciendis, quod sint nostrum temporibus, architecto asperiores culpa odio cupiditate magni ullam perspiciatis. Culpa veritatis vel assumenda.</p>
+          <a href="#" class="btn btn--red">Read more</a>
+        </div>
+          <div class="processes__image">
+            <span>1.</span>
+            <div class="processes__text">
+              <h4>Idea</h4>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi, animi.</p>
+            </div>
+          </div>
+ <div class="processes__image"><span>2.</span>
+  <div class="processes__text">
+    <h4>Design</h4>
+  </div></div>
+ <div class="processes__image"><span>3.</span>
+  <div class="processes__text">
+    <h4>Output</h4>
+  </div></div>
+
       </div>
     </section>
   </body>
