Add team section

--- a/index.html
+++ b/index.html
@@ -37,23 +37,26 @@
         <li><a class="navbar__link" href="#services">Services</a></li>
         <li><a class="navbar__link" href="#process">Process</a></li>
         <li><a class="navbar__link" href="#team">Team</a></li>
-        <li><a class="navbar__link" href="#clients">Clients</a></li>
         <li><a class="navbar__link" href="#work">Work</a></li>
         <li><a class="navbar__link" href="#contact">Contact</a></li>
       </ul>
     </nav>
     <section id="about" class="about">
       <div class="about-wrapper">
-          <div class="about-text">
-              <h2>Who we are</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae labore autem mollitia aperiam illo laboriosam dicta eveniet at quisquam eligendi odit porro vel quis perferendis nesciunt, laudantium ut nostrum? Laborum?</p>
-              <a href="#" class="btn btn--red">Read more</a>
-            </div>
-            <div class="about-img">
-                <img src="./photo/laptop.png" alt="design">
-            </div>
+        <div class="about-text">
+          <h2>Who we are</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae
+            labore autem mollitia aperiam illo laboriosam dicta eveniet at
+            quisquam eligendi odit porro vel quis perferendis nesciunt,
+            laudantium ut nostrum? Laborum?
+          </p>
+          <a href="#" class="btn btn--red">Read more</a>
+        </div>
+        <div class="about-img">
+          <img src="./photo/laptop.png" alt="design" />
+        </div>
       </div>
-
     </section>
     <section id="services" class="services">
       <h2>What we do</h2>
@@ -61,81 +64,132 @@
       <div class="service">
         <div class="service-header">
           <div class="service__icon">
-            <img src="./photo/01.svg">
+            <img src="./photo/01.svg" />
           </div>
           <h3>Creative Work</h3>
         </div>
-        <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+        <p class="service__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+          blanditiis quo nobis dolorum!
+        </p>
       </div>
       <div class="service">
         <div class="service-header">
           <div class="service__icon">
-            <img src="./photo/02.svg">
+            <img src="./photo/02.svg" />
           </div>
           <h3>We do Best</h3>
         </div>
-        <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+        <p class="service__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+          blanditiis quo nobis dolorum!
+        </p>
       </div>
       <div class="service">
         <div class="service-header">
           <div class="service__icon">
-            <img src="./photo/03.svg">
+            <img src="./photo/03.svg" />
           </div>
           <h3>Best Company</h3>
         </div>
-        <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+        <p class="service__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+          blanditiis quo nobis dolorum!
+        </p>
       </div>
       <div class="service">
         <div class="service-header">
           <div class="service__icon">
-            <img src="./photo/04.svg">
+            <img src="./photo/04.svg" />
           </div>
           <h3>Nice Idea</h3>
         </div>
-        <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+        <p class="service__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+          blanditiis quo nobis dolorum!
+        </p>
       </div>
       <div class="service">
         <div class="service-header">
           <div class="service__icon">
-            <img src="./photo/05.svg">
+            <img src="./photo/05.svg" />
           </div>
           <h3>Proffesional</h3>
         </div>
-        <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+        <p class="service__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+          blanditiis quo nobis dolorum!
+        </p>
       </div>
       <div class="service">
         <div class="service-header">
           <div class="service__icon">
-            <img src="./photo/06.svg">
+            <img src="./photo/06.svg" />
           </div>
           <h3>Great Services</h3>
         </div>
-        <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis quo nobis dolorum!</p>
+        <p class="service__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+          blanditiis quo nobis dolorum!
+        </p>
       </div>
     </section>
     <section id="process" class="process">
-        <h2>How we works</h2>
+      <h2>How we works</h2>
       <div class="processes">
         <div class="processes__main-text">
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque amet officiis sequi dolorem, reiciendis, quod sint nostrum temporibus, architecto asperiores culpa odio cupiditate magni ullam perspiciatis. Culpa veritatis vel assumenda.</p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque
+            amet officiis sequi dolorem, reiciendis, quod sint nostrum
+            temporibus, architecto asperiores culpa odio cupiditate magni ullam
+            perspiciatis. Culpa veritatis vel assumenda.
+          </p>
           <a href="#" class="btn btn--red">Read more</a>
         </div>
-          <div class="processes__image">
-            <span>1.</span>
-            <div class="processes__text">
-              <h4>Idea</h4>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi, animi.</p>
-            </div>
+        <div class="processes__image">
+          <span>1.</span>
+          <div class="processes__text">
+            <h4>Idea</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi,
+              animi.
+            </p>
           </div>
- <div class="processes__image"><span>2.</span>
-  <div class="processes__text">
-    <h4>Design</h4>
-  </div></div>
- <div class="processes__image"><span>3.</span>
-  <div class="processes__text">
-    <h4>Output</h4>
-  </div></div>
-
+        </div>
+        <div class="processes__image">
+          <span>2.</span>
+          <div class="processes__text">
+            <h4>Design</h4>
+          </div>
+        </div>
+        <div class="processes__image">
+          <span>3.</span>
+          <div class="processes__text">
+            <h4>Output</h4>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="team" class="team">
+      <h2>Our creative team</h2>
+      <div class="slider-wrapper">
+        <span class="arrow-left"></span>
+        <div class="team-slider">
+          <div class="team-person">
+            <div class="team-person__img"><img src="./photo/01-team.jpg" alt="John Doe"></div>
+            <div class="team-person__name"><span>John Doe</span></div>
+          </div>
+          <div class="team-person">
+            <div class="team-person__img team-person__img--active"><img src="./photo/03-team.jpg" alt="Jimmie Doe"></div>
+            <div class="team-person__name team-person__name--active"><span>Jimmie Doe</span></div>
+            <div class="team-person__position"><span>Designer</span></div>
+          </div>
+          <div class="team-person">
+            <div class="team-person__img"><img src="./photo/02-team.jpg" alt="Martha Doe"></div>
+            <div class="team-person__name"><span>Martha Doe</span></div>
+          </div>
+        </div>
+        <span class="arrow-right"></span>
       </div>
     </section>
   </body>
