Add client section

--- a/index.html
+++ b/index.html
@@ -176,21 +176,53 @@
         <span class="arrow-left"></span>
         <div class="team-slider">
           <div class="team-person">
-            <div class="team-person__img"><img src="./photo/01-team.jpg" alt="John Doe"></div>
+            <div class="team-person__img">
+              <img src="./photo/01-team.jpg" alt="John Doe" />
+            </div>
             <div class="team-person__name"><span>John Doe</span></div>
           </div>
           <div class="team-person">
-            <div class="team-person__img team-person__img--active"><img src="./photo/03-team.jpg" alt="Jimmie Doe"></div>
-            <div class="team-person__name team-person__name--active"><span>Jimmie Doe</span></div>
+            <div class="team-person__img team-person__img--active">
+              <img src="./photo/03-team.jpg" alt="Jimmie Doe" />
+            </div>
+            <div class="team-person__name team-person__name--active">
+              <span>Jimmie Doe</span>
+            </div>
             <div class="team-person__position"><span>Designer</span></div>
           </div>
           <div class="team-person">
-            <div class="team-person__img"><img src="./photo/02-team.jpg" alt="Martha Doe"></div>
+            <div class="team-person__img">
+              <img src="./photo/02-team.jpg" alt="Martha Doe" />
+            </div>
             <div class="team-person__name"><span>Martha Doe</span></div>
           </div>
         </div>
         <span class="arrow-right"></span>
       </div>
     </section>
+    <section class="clients">
+      <h2>What client says</h2>
+      <div class="client">
+        <div class="client__image">
+          <img src="./photo/03-clientBig.jpg" alt="Client Name" />
+        </div>
+        <div class="client__quote-box">
+          <p class="client__quote">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+            dolorem commodi consequuntur omnis qui provident rerum illum odio ab
+            iste nemo doloremque beatae, quasi earum quae!
+          </p>
+          <p class="client__name">
+            Jinny Snow, Company CEO
+          </p>
+          <div class="other-clients">
+            <div class="other-clients-photo"><img src="./photo/01-team.jpg" alt="Client 1" /></div>
+            <div class="other-clients-photo"><img src="./photo/02-team.jpg" alt="Client 2" /></div>
+            <div class="other-clients-photo"><img src="./photo/03-client.jpg" alt="Client 3" /></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer></footer>
   </body>
 </html>
