--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/a71a9e1a25.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -216,13 +220,64 @@
             Jinny Snow, Company CEO
           </p>
           <div class="other-clients">
-            <div class="other-clients-photo"><img src="./photo/01-team.jpg" alt="Client 1" /></div>
-            <div class="other-clients-photo"><img src="./photo/02-team.jpg" alt="Client 2" /></div>
-            <div class="other-clients-photo"><img src="./photo/03-client.jpg" alt="Client 3" /></div>
+            <div class="other-clients-photo">
+              <img src="./photo/01-team.jpg" alt="Client 1" />
+            </div>
+            <div class="other-clients-photo">
+              <img src="./photo/02-team.jpg" alt="Client 2" />
+            </div>
+            <div class="other-clients-photo">
+              <img src="./photo/03-client.jpg" alt="Client 3" />
+            </div>
           </div>
         </div>
       </div>
     </section>
-    <footer></footer>
+    <footer>
+      <h2>Get in touch</h2>
+      <div class="contacts">
+        <div class="contact">
+          <div class="contact__icon">
+            <img src="./photo/06.svg" />
+          </div>
+          <div class="contact__text">
+            <h4>Email</h4>
+            <p>info@greatemail.com</p>
+            <p>contact@greatemail.com</p>
+          </div>
+        </div>
+        <div class="contact">
+            <div class="contact__icon">
+              <img src="./photo/phone.svg" />
+            </div>
+            <div class="contact__text">
+              <h4>Phone</h4>
+              <p>+48 123 456 789</p>
+              <p>+48 555 555 555</p>
+            </div>
+          </div>
+          <div class="contact">
+              <div class="contact__icon">
+                <img src="./photo/05.svg" />
+              </div>
+              <div class="contact__text">
+                <h4>Office</h4>
+                <p>54 Main street</p>
+                <p>Poland 33-456</p>
+              </div>
+            </div>
+      </div>
+      <div class="socials">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-google-plus-g"></i>
+        <i class="fab fa-vk"></i>
+        <i class="fab fa-linkedin-in"></i>
+        <i class="fab fa-digg"></i>
+        <i class="fab fa-deviantart"></i>
+      </div>
+      <div class="copyright">
+        Template by PSDFreebies.com | Coded by Igor Wysocki 2019
+      </div>
+    </footer>
   </body>
 </html>
