Add hamburger menu

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
         <li><a class="navbar__link" href="#services">Services</a></li>
         <li><a class="navbar__link" href="#process">Process</a></li>
         <li><a class="navbar__link" href="#team">Team</a></li>
-        <li><a class="navbar__link" href="#work">Work</a></li>
+        <li><a class="navbar__link" href="#clients">Work</a></li>
         <li><a class="navbar__link" href="#contact">Contact</a></li>
       </ul>
+      <i class="fas fa-hamburger"></i>
     </nav>
     <section id="about" class="about">
       <div class="about-wrapper">
@@ -204,7 +205,7 @@
         <span class="arrow-right"></span>
       </div>
     </section>
-    <section class="clients">
+    <section id='clients' class="clients">
       <h2>What client says</h2>
       <div class="client">
         <div class="client__image">
@@ -233,7 +234,7 @@
         </div>
       </div>
     </section>
-    <footer>
+    <footer id="contact">
       <h2>Get in touch</h2>
       <div class="contacts">
         <div class="contact">
@@ -279,5 +280,6 @@
         Template by PSDFreebies.com | Coded by Igor Wysocki 2019
       </div>
     </footer>
+    <script src="./js/index.js"></script>
   </body>
 </html>
